--- a/Reports/Metabolon.Rmd
+++ b/Reports/Metabolon.Rmd
@@ -9,7 +9,8 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-source("/Users/senosam/Documents/Repositories/Research/DH_project01/R/20_Metabolon_vizfunctions.R")
+library(devtools)
+source_url('https://raw.githubusercontent.com/msenosain/DH_project01/main/R/20_Metabolon_vizfunctions.R')
 set_environment()
 ```
 
